minor design tweaks

--- a/app/templates/get-started.hbs
+++ b/app/templates/get-started.hbs
@@ -42,7 +42,7 @@
             <li class="au-c-numbered-list__item">
               <p><strong>Stap 2</strong> – Informatie verzamelen en invoeren</p>
               <p class="au-u-margin-top-tiny">Je kan dit als museum helemaal zelf!</p>
-              <p>De museumverantwoordelijke:</p>
+              <p class="au-u-margin-top-small">De museumverantwoordelijke:</p>
               <ul>
                 <li>verzamelt de toegankelijkheidsdata met behulp van een praktische online handleiding.</li>
                 <li>voert de toegankelijkheidsdata in de invoerapplicatie in.</li>
