Execute requested text changes.

--- a/app/templates/get-started.hbs
+++ b/app/templates/get-started.hbs
@@ -30,13 +30,9 @@
           <p>Welke stappen moet ik doorlopen? Wat is nodig om een widget te kunnen tonen op de website? Hoe ga ik aan de slag?</p>
           <ol class="au-c-numbered-list">
             <li class="au-c-numbered-list__item">
-              <p><strong>Stap 1</strong> – Schrijf je museum in vóór 15 augustus 2021.</p>
+              <p><strong>Stap 1</strong> – Schrijf je museum in.</p>
               <ul>
                 <li>Vul het <AuLink @linkRoute="subscribe">Inschrijfformulier</AuLink> in en motiveer waarom we de toegankelijkheidstroeven van jouw museum in de kijker moeten zetten.</li>
-                <li>
-                  40 musea kunnen instappen in de volgende fase van het project.
-                </li>
-                <li>Ben je geselecteerd? Inter maakt jouw museum aan in de databank en registreert de museumverantwoordelijken (max. 2 per museum).</li>
               </ul>
             </li>
             <li class="au-c-numbered-list__item">
@@ -87,7 +83,7 @@
               <AuBadge @icon="sitemap" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
               <AuContent>
                 <AuHeading @level="3" @skin="4">
-                  Voor gebruikers
+                  Voor bezoekers
                 </AuHeading>
                 <p class="au-u-margin-top-tiny">Een overzicht van de gebouwen waarvoor er toegankelijkheidsinformatie beschikbaar is.</p>
                 <p>
