--- a/app/templates/index.hbs
+++ b/app/templates/index.hbs
@@ -102,13 +102,14 @@
         <div class="au-o-grid au-o-grid--middle">
           <div class="au-o-grid__item au-u-1-2@medium">
             <AuContent @skin="large">
-              <h2 class="au-c-heading au-c-heading--3">Stap mee in het pilootproject!</h2>
-              <p class="au-u-margin-top-small">
+              <h2 class="au-c-heading au-c-heading--3">Pilootfase met 40 Vlaamse musea</h2>
+              <p class="au-u-margin-top-small">Nadat we van start zijn gegaan met de Gentse stadsmusea en historische huizen, wordt het piloottraject uitgebreid met <strong>40 andere Vlaamse musea.</strong> Zij zullen de Toegankelijkheidswijzer binnenkort op hun website integreren.</p>
+              <p>
                 Wil je als Vlaams museum inzetten op toegankelijkheid?<br>
                 Wil je de bezoekers van jouw museum optimaal informeren?
               </p>
-              <p><strong>Aarzel dan niet en <LinkTo @route="get-started" class="au-c-link">stel je kandidaat</LinkTo>.</strong></p>
-              <p>We zijn van start gegaan met de Gentse stadsmusea en historische huizen, en willen nu de kans bieden aan <strong>40 andere Vlaamse musea</strong> om de Toegankelijkheidswijzer ook op hun website te integreren.  </p>
+              <p><strong>Aarzel dan niet en <LinkTo @route="get-started" class="au-c-link">stel je ook kandidaat</LinkTo>.</strong></p>
+              <p>De bedoeling is om de applicatie na de pilootfase open te stellen voor alle Vlaamse musea. Nadien breiden we geleidelijk aan uit naar andere sectoren (zoals restaurants, cafés of openbare toiletten).</p>
             </AuContent>
           </div>
           <div class="au-o-grid__item au-u-1-2@medium">
@@ -178,7 +179,7 @@
               <AuBadge @icon="sitemap" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
               <AuContent>
                 <AuHeading @level="3" @skin="4">
-                  Voor gebruikers
+                  Voor bezoekers
                 </AuHeading>
                 <p class="au-u-margin-top-tiny">Een overzicht van de gebouwen waarvoor er toegankelijkheidsinformatie beschikbaar is.</p>
                 <p>
