--- a/app/templates/subscribe.hbs
+++ b/app/templates/subscribe.hbs
@@ -40,7 +40,7 @@ Locatie - Inschrijving" class="au-c-iframe"></iframe>
               <AuBadge @icon="sitemap" @skin="brand" class="au-u-margin-right-none au-u-margin-bottom-small" />
               <AuContent>
                 <AuHeading @level="3" @skin="4">
-                  Voor gebruikers
+                  Voor bezoekers
                 </AuHeading>
                 <p class="au-u-margin-top-tiny">Een overzicht van de gebouwen waarvoor er toegankelijkheidsinformatie beschikbaar is.</p>
                 <p>
