Use @model instead of this.model in poi.show

--- a/app/templates/poi/show.hbs
+++ b/app/templates/poi/show.hbs
@@ -34,8 +34,8 @@
           <TransferMuseum
             @buttonLabel="Verstuur"
             @path={{if this.currentAccount.roleIsValidator
-                      (concat "/transfer/museum/" this.model.id "/send-to-museum")
-                      (concat "/transfer/museum/" this.model.id "/send-to-validator")}}
+                      (concat "/transfer/museum/" @model.id "/send-to-museum")
+                      (concat "/transfer/museum/" @model.id "/send-to-validator")}}
             @buttonIcon="send"
             @modalTitle="Verstuur wijzigingen"
             @sendLabel="Verstuur deze versie"
