Add Druif and Hidrodoe to published widgets

--- a/app/templates/buildings.hbs
+++ b/app/templates/buildings.hbs
@@ -173,7 +173,29 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://diest.be/museum-voor-religieuze-kunst" class="au-c-link">Museum Voor Religieuze Kunst</a>
+                        <a href="https://diest.be/museum-voor-religieuze-kunst" class="au-c-link">Museum Voor Religieuze Kunst Diest</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://www.overijse.be/druif-toegankelijkheid" class="au-c-link">Bezoekerscentrum Dru!f, huis van de tafeldruif</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://www.hidrodoe.be/plan-je-dag/toegankelijkheid" class="au-c-link">Hidrodoe</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
