--- a/app/templates/developers.hbs
+++ b/app/templates/developers.hbs
@@ -19,6 +19,11 @@
                 </AuNavigationLink>
               </li>
               <li class="au-c-list-navigation__item">
+                <AuNavigationLink @linkRoute="developers.iframe">
+                  Widget integreren alternatief (met iframe)
+                </AuNavigationLink>
+              </li>
+              <li class="au-c-list-navigation__item">
                 <AuNavigationLink @linkRoute="developers.buildings">
                   Locatie URI's
                 </AuNavigationLink>
