--- a/app/templates/buildings.hbs
+++ b/app/templates/buildings.hbs
@@ -212,6 +212,17 @@
                   </AuToolbar>
                 </article>
               </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://www.hofvanbusleyden.be/toegankelijkheid" class="au-c-link">Museum Hof van Busleyden</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
             </ul>
             <AuContent id="content" class="au-u-margin-bottom-small au-u-margin-top">
               <p>De URI’s voor de technische integratie zijn beschikbaar op <LinkTo @route="developers.buildings" class="au-c-link">de pagina voor ontwikkelaars</LinkTo>.</p>
