--- a/app/templates/developers/styling.hbs
+++ b/app/templates/developers/styling.hbs
@@ -1,5 +1,5 @@
 <AuHeading @level="2" @skin="2">Stijl aanpassen</AuHeading>
-<p>U kan een aantal design elementen (kleuren, typografie) aanpassen door deze mee te geven in de widget code.</p>
+<p>Je kan een aantal design elementen (kleuren, typografie) aanpassen door deze mee te geven in de widget code.</p>
 
 <CodeBlock @code='<script
   src="{{this.baseUri.origin}}/widget.js"
@@ -32,5 +32,5 @@
 </ul>
 
 <AuHeading @level="3" @skin="3">Vragen of hulp nodig?</AuHeading>
-<p>Indien u problemen tegenkomt bij het implementeren van de widget kan u ons contacteren op <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
+<p>Als je problemen tegenkomt bij het implementeren van de widget dan kan je ons contacteren op <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
 <p>Bugs of issues met de widget kan u melden op de <a href="https://github.com/lblod/frontend-toevla/issues" target="_blank" rel="noopener noreferrer" class="au-c-link">github pagina</a> van het project.</p>
