Update title in menu section

--- a/app/templates/developers.hbs
+++ b/app/templates/developers.hbs
@@ -20,7 +20,7 @@
               </li>
               <li class="au-c-list-navigation__item">
                 <AuNavigationLink @linkRoute="developers.iframe">
-                  Widget integreren alternatief (met iframe)
+                  Widget integreren alternatief
                 </AuNavigationLink>
               </li>
               <li class="au-c-list-navigation__item">
