More textual updates

--- a/app/templates/developers/intro.hbs
+++ b/app/templates/developers/intro.hbs
@@ -1,7 +1,7 @@
 <AuHeading @level="2" @skin="2">Widget integreren</AuHeading>
 <p>Er zijn verschillende mogelijkheden om de widget op je website te plaatsen. De standaard integratie, die het best bruikbaar blijft, ook op mobiele apparaten of bij het versmallen van het scherm staat hieronder omschreven.</p>
 
-<p>Indien dit niet mogelijk is dan kan je de alternatieven op de pagina ‘Widget integreren – alternatieven’ bekijken. Daar omschrijven we hoe je de widget kan integreren via ‘iframe’ of via een ‘link'.</p>
+<p>Als dit niet mogelijk is dan kan je de alternatieven op de pagina ‘Widget integreren – alternatieven’ bekijken. Daar omschrijven we hoe je de widget kan integreren via ‘iframe’ of via een ‘link'.</p>
 
 <p>Volg volgende stappen om de widget op je website te plaatsen.</p>
 
@@ -17,7 +17,7 @@
 
 <p>Zet de resource URI op de juiste plaats in de widget code. Plaats deze onder <CodeInline @code='resource=""' @language="html" />. De waarde is een combinatie van <CodeInline @code='http://data.toegankelijk.vlaanderen.be/id/widgets/' @language="html" /> + <strong>een unieke identificatie code</strong>.</p>
 
-<AuHeading @level="3" @skin="3">3. Pas indien gewenst de stijl van de widget aan</AuHeading>
+<AuHeading @level="3" @skin="3">3. Pas als gewenst de stijl van de widget aan</AuHeading>
 <p>Je kan een aantal design elementen (kleuren, typografie) aanpassen door deze mee te geven in de widget code.</p>
 
 <CodeBlock @code='<script
@@ -42,4 +42,4 @@
 <p>Meer info over een correcte <LinkTo @route="developers.plaatsing" class="au-c-link">plaatsing van de widget</LinkTo></p>
 
 <AuHeading @level="3" @skin="3">Vragen of hulp nodig?</AuHeading>
-<p>Indien u problemen tegenkomt bij het implementeren van de widget kan u ons contacteren op <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a></p>
+<p>Als je problemen tegenkomt bij het implementeren van de widget dan kan je ons contacteren op <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
