--- a/app/templates/developers/styling.hbs
+++ b/app/templates/developers/styling.hbs
@@ -10,7 +10,7 @@
   data-style-link-hover="#0F6FD7"></script>'
   @language="html" />
 
-<p>Hieronder vind u een lijst met properties die aanpasbaar zijn:</p>
+<p>Hieronder vind je een lijst met properties die aanpasbaar zijn:</p>
 <ul>
   <li><CodeInline @code='data-style-font="BlinkMacSystemFont, Segoe UI, Roboto, Helvetica, Arial, sans-serif"'/>: font family</li>
   <li><CodeInline @code='data-style-bold="700"'/>: bold font gewicht</li>
