--- a/app/templates/developers/iframe.hbs
+++ b/app/templates/developers/iframe.hbs
@@ -9,7 +9,7 @@
 
 <AuHeading @level="3" @skin="3">Optie 1: Widget integreren via een iframe</AuHeading>
 
-<p>Het integreren van een ‘iframe’ lijkt op de widget ‘script’ integratie. Ook hier zal de widget zichtbaar zijn op de website pagina. Je kan scrollen, openklikken … maar je zal zien dat de widget niet echt in de pagina vervat zit maar dat deze zichtbaar is in zijn eigen venster. Op mobiele apparaten zal de widget in een iframe minder flexibel zijn, de breedte zal bijvoorbeeld niet automatisch worden aangepast.</p>
+<p>Het integreren van een ‘iframe’ lijkt op de widget ‘script’ integratie. Ook hier zal de widget zichtbaar zijn op de website pagina. Je kan scrollen, openklikken ... maar je zal zien dat de widget niet echt in de pagina vervat zit maar dat deze zichtbaar is in zijn eigen venster. Op mobiele apparaten zal de widget in een iframe minder flexibel zijn, de breedte zal bijvoorbeeld niet automatisch worden aangepast.</p>
 
 <p>Volg volgende stappen om de widget in een iframe op je website te plaatsen.</p>
 
@@ -44,4 +44,4 @@
 <p>De link is een combinatie van <CodeInline @code='https://widget.toegankelijk.vlaanderen.be/direct/' @language="html" /> + <strong>de unieke cijfer-letter code</strong>.</p>
 
 <AuHeading @level="3" @skin="3">Vragen of hulp nodig?</AuHeading>
-<p>Indien je problemen tegenkomt bij het implementeren van de widget kan u ons contacteren op <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a></p>
+<p>Als je problemen tegenkomt bij het implementeren van de widget dan kan je ons contacteren op <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
