add open source section

--- a/app/templates/developers.hbs
+++ b/app/templates/developers.hbs
@@ -38,6 +38,11 @@
                   Plaatsing van de widget
                 </AuNavigationLink>
               </li>
+              <li class="au-c-list-navigation__item">
+                <AuNavigationLink @linkRoute="developers.opensource">
+                  Open source
+                </AuNavigationLink>
+              </li>
             </ul>
           </div>
           <div class="au-o-grid__item au-u-3-4@medium">
