Add new buildings

--- a/app/templates/buildings.hbs
+++ b/app/templates/buildings.hbs
@@ -234,6 +234,39 @@
                   </AuToolbar>
                 </article>
               </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://www.ensorstad.be/nl/toegankelijkheid" class="au-c-link">Het James Ensorhuis</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://www.galloromeinsmuseum.be/nl/praktisch/toegankelijkheid" class="au-c-link">Gallo-Romeins Museum</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
+              <li class="au-o-grid__item">
+                <article class="au-c-card">
+                  <AuToolbar @border="bottom" @size="small">
+                    <AuToolbarGroup>
+                      <AuHeading @level="2" @skin="4">
+                        <a href="https://www.divaantwerp.be/nl/visit/toegankelijkheid" class="au-c-link">DIVA - Museum voor diamant, juwelen en zilver</a>
+                      </AuHeading>
+                    </AuToolbarGroup>
+                  </AuToolbar>
+                </article>
+              </li>
             </ul>
             <AuContent id="content" class="au-u-margin-bottom-small au-u-margin-top">
               <p>De URI’s voor de technische integratie zijn beschikbaar op <LinkTo @route="developers.buildings" class="au-c-link">de pagina voor ontwikkelaars</LinkTo>.</p>
