Update copy for Open Source section

--- a/app/templates/developers/opensource.hbs
+++ b/app/templates/developers/opensource.hbs
@@ -1,8 +1,11 @@
 <AuHeading @level="2" @skin="2">Open source</AuHeading>
-<p>Deze software is open source.</p>
+<p>Deze software is open source, gebaseerd op <a href="https://semantic.works/" class="au-c-link">semantic.works</a> en <a href="https://emberjs.com" class="au-c-link">EmberJS</a> .  Je kan het product aanpassen en hergebruiken binnen je eigen context.</p>
 
-<p>Broncode kan je op github vinden:</p>
+<p>De broncode kan je op github vinden:</p>
 <ul>
   <li><a href="https://github.com/lblod/frontend-toevla" class="au-c-link">Widget</a></li>
-  <li><a href="https://github.com/lblod/frontend-toevla-data-entry" class="au-c-link">Data entry</a></li>
+  <li><a href="https://github.com/lblod/frontend-toevla-data-entry" class="au-c-link">Data invoer</a></li>
+  <li><a href="https://github.com/lblod/app-toevla" class="au-c-link">Backend</a></li>
 </ul>
+
+<p>Indien je verbeteringen wenst uit te voeren kan je een fork maken op GitHub.  De wijzigingen kan je via een Pull Request op GitHub insturen.</p>
