--- a/app/templates/buildings.hbs
+++ b/app/templates/buildings.hbs
@@ -30,7 +30,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://dewereldvankina.stad.gent/toegankelijkheid" class="au-c-link">De wereld van Kina: het Huis</a>
+                        <a href="https://dewereldvankina.stad.gent/toegankelijkheid" class="au-c-link" target="_blank">De wereld van Kina: het Huis</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -41,7 +41,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://huisvanalijn.be/nl/toegankelijkheid" class="au-c-link">Huis van Alijn</a>
+                        <a href="https://huisvanalijn.be/nl/toegankelijkheid" class="au-c-link" target="_blank">Huis van Alijn</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -52,7 +52,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://smak.be/toegankelijkheid" class="au-c-link">S.M.A.K. Gent</a>
+                        <a href="https://smak.be/toegankelijkheid" class="au-c-link" target="_blank">S.M.A.K. Gent</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -63,7 +63,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://dewereldvankina.stad.gent/toegankelijkheid" class="au-c-link">De wereld van Kina: de Tuin</a>
+                        <a href="https://dewereldvankina.stad.gent/toegankelijkheid" class="au-c-link" target="_blank">De wereld van Kina: de Tuin</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -74,7 +74,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://www.mskgent.be/nl/toegankelijkheid" class="au-c-link">MSK Gent - Museum voor Schone Kunsten Gent</a>
+                        <a href="https://www.mskgent.be/nl/toegankelijkheid" class="au-c-link" target="_blank">MSK Gent - Museum voor Schone Kunsten Gent</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -85,7 +85,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://www.museumdrguislain.be/nl/toegankelijkheid" class="au-c-link">Museum Dr. Guislain</a>
+                        <a href="https://www.museumdrguislain.be/nl/toegankelijkheid" class="au-c-link" target="_blank">Museum Dr. Guislain</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -96,7 +96,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://www.gum.gent/nl/toegankelijkheid" class="au-c-link">GUM - Gents Universiteitsmuseum</a>
+                        <a href="https://www.gum.gent/nl/toegankelijkheid" class="au-c-link" target="_blank">GUM - Gents Universiteitsmuseum</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -107,7 +107,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://www.designmuseumgent.be/toegankelijkheid" class="au-c-link">Design Museum Gent</a>
+                        <a href="https://www.designmuseumgent.be/toegankelijkheid" class="au-c-link" target="_blank">Design Museum Gent</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -118,7 +118,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://www.industriemuseum.be/nl/toegankelijkheid" class="au-c-link">Industriemuseum</a>
+                        <a href="https://www.industriemuseum.be/nl/toegankelijkheid" class="au-c-link" target="_blank">Industriemuseum</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -129,7 +129,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://historischehuizen.stad.gent/nl/sint-pietersabdij/toegankelijkheid" class="au-c-link">Sint-Pietersabdij</a>
+                        <a href="https://historischehuizen.stad.gent/nl/sint-pietersabdij/toegankelijkheid" class="au-c-link" target="_blank">Sint-Pietersabdij</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -140,7 +140,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://historischehuizen.stad.gent/nl/gravensteen/toegankelijkheid" class="au-c-link">Gravensteen</a>
+                        <a href="https://historischehuizen.stad.gent/nl/gravensteen/toegankelijkheid" class="au-c-link" target="_blank">Gravensteen</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -151,7 +151,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://www.stamgent.be/nl_be/bezoek-het-stam/toegankelijkheid" class="au-c-link">STAM - Stadsmuseum Gent</a>
+                        <a href="https://www.stamgent.be/nl_be/bezoek-het-stam/toegankelijkheid" class="au-c-link" target="_blank">STAM - Stadsmuseum Gent</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -162,7 +162,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="http://damiaanmuseum.be/toegankelijkheid/" class="au-c-link">Damiaanmuseum</a>
+                        <a href="http://damiaanmuseum.be/toegankelijkheid/" class="au-c-link" target="_blank">Damiaanmuseum</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -173,7 +173,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://diest.be/museum-voor-religieuze-kunst" class="au-c-link">Museum Voor Religieuze Kunst Diest</a>
+                        <a href="https://diest.be/museum-voor-religieuze-kunst" class="au-c-link" target="_blank">Museum Voor Religieuze Kunst Diest</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -184,7 +184,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://www.overijse.be/druif-toegankelijkheid" class="au-c-link">Bezoekerscentrum Dru!f, huis van de tafeldruif</a>
+                        <a href="https://www.overijse.be/druif-toegankelijkheid" class="au-c-link" target="_blank">Bezoekerscentrum Dru!f, huis van de tafeldruif</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -195,7 +195,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://www.hidrodoe.be/plan-je-dag/toegankelijkheid" class="au-c-link">Hidrodoe</a>
+                        <a href="https://www.hidrodoe.be/plan-je-dag/toegankelijkheid" class="au-c-link" target="_blank">Hidrodoe</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -206,7 +206,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://www.tenduinen.be/nl/toegankelijkheid" class="au-c-link">Abdijmuseum Ten Duinen</a>
+                        <a href="https://www.tenduinen.be/nl/toegankelijkheid" class="au-c-link" target="_blank">Abdijmuseum Ten Duinen</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -217,7 +217,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://www.hofvanbusleyden.be/toegankelijkheid" class="au-c-link">Museum Hof van Busleyden</a>
+                        <a href="https://www.hofvanbusleyden.be/toegankelijkheid" class="au-c-link" target="_blank">Museum Hof van Busleyden</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -228,7 +228,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://www.museumaandeijzer.be/nl/plan-je-bezoek/#toegankelijkheid" class="au-c-link">Museum aan de IJzer</a>
+                        <a href="https://www.museumaandeijzer.be/nl/plan-je-bezoek/#toegankelijkheid" class="au-c-link" target="_blank">Museum aan de IJzer</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -239,7 +239,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://www.ensorstad.be/nl/toegankelijkheid" class="au-c-link">Het James Ensorhuis</a>
+                        <a href="https://www.ensorstad.be/nl/toegankelijkheid" class="au-c-link" target="_blank">Het James Ensorhuis</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -250,7 +250,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://www.galloromeinsmuseum.be/nl/praktisch/toegankelijkheid" class="au-c-link">Gallo-Romeins Museum</a>
+                        <a href="https://www.galloromeinsmuseum.be/nl/praktisch/toegankelijkheid" class="au-c-link" target="_blank">Gallo-Romeins Museum</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -261,7 +261,7 @@
                   <AuToolbar @border="bottom" @size="small">
                     <AuToolbarGroup>
                       <AuHeading @level="2" @skin="4">
-                        <a href="https://www.divaantwerp.be/nl/visit/toegankelijkheid" class="au-c-link">DIVA - Museum voor diamant, juwelen en zilver</a>
+                        <a href="https://www.divaantwerp.be/nl/visit/toegankelijkheid" class="au-c-link" target="_blank">DIVA - Museum voor diamant, juwelen en zilver</a>
                       </AuHeading>
                     </AuToolbarGroup>
                   </AuToolbar>
@@ -269,7 +269,7 @@
               </li>
             </ul>
             <AuContent id="content" class="au-u-margin-bottom-small au-u-margin-top">
-              <p>De URI’s voor de technische integratie zijn beschikbaar op <LinkTo @route="developers.buildings" class="au-c-link">de pagina voor ontwikkelaars</LinkTo>.</p>
+              <p>De URI’s voor de technische integratie zijn beschikbaar op <LinkTo @route="developers.buildings" class="au-c-link" target="_blank">de pagina voor ontwikkelaars</LinkTo>.</p>
             </AuContent>
           </div>
         </div>
