Construct public buildings route based on template and data
This page was constructed by hand.  It's slightly easier to construct it
using a logic statement.  This will also help us when extracting this
information into the database.

--- a/app/templates/buildings.hbs
+++ b/app/templates/buildings.hbs
@@ -25,248 +25,19 @@
               <p>Er is een toegankelijkheidswijzer beschikbaar voor volgende musea:</p>
             </AuContent>
             <ul class="au-o-grid au-o-grid--tiny">
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://dewereldvankina.stad.gent/toegankelijkheid" class="au-c-link" target="_blank">De wereld van Kina: het Huis</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://huisvanalijn.be/nl/toegankelijkheid" class="au-c-link" target="_blank">Huis van Alijn</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://smak.be/toegankelijkheid" class="au-c-link" target="_blank">S.M.A.K. Gent</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://dewereldvankina.stad.gent/toegankelijkheid" class="au-c-link" target="_blank">De wereld van Kina: de Tuin</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://www.mskgent.be/nl/toegankelijkheid" class="au-c-link" target="_blank">MSK Gent - Museum voor Schone Kunsten Gent</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://www.museumdrguislain.be/nl/toegankelijkheid" class="au-c-link" target="_blank">Museum Dr. Guislain</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://www.gum.gent/nl/toegankelijkheid" class="au-c-link" target="_blank">GUM - Gents Universiteitsmuseum</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://www.designmuseumgent.be/toegankelijkheid" class="au-c-link" target="_blank">Design Museum Gent</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://www.industriemuseum.be/nl/toegankelijkheid" class="au-c-link" target="_blank">Industriemuseum</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://historischehuizen.stad.gent/nl/sint-pietersabdij/toegankelijkheid" class="au-c-link" target="_blank">Sint-Pietersabdij</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://historischehuizen.stad.gent/nl/gravensteen/toegankelijkheid" class="au-c-link" target="_blank">Gravensteen</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://www.stamgent.be/nl_be/bezoek-het-stam/toegankelijkheid" class="au-c-link" target="_blank">STAM - Stadsmuseum Gent</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="http://damiaanmuseum.be/toegankelijkheid/" class="au-c-link" target="_blank">Damiaanmuseum</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://diest.be/museum-voor-religieuze-kunst" class="au-c-link" target="_blank">Museum Voor Religieuze Kunst Diest</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://www.overijse.be/druif-toegankelijkheid" class="au-c-link" target="_blank">Bezoekerscentrum Dru!f, huis van de tafeldruif</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://www.hidrodoe.be/plan-je-dag/toegankelijkheid" class="au-c-link" target="_blank">Hidrodoe</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://www.tenduinen.be/nl/toegankelijkheid" class="au-c-link" target="_blank">Abdijmuseum Ten Duinen</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://www.hofvanbusleyden.be/toegankelijkheid" class="au-c-link" target="_blank">Museum Hof van Busleyden</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://www.museumaandeijzer.be/nl/plan-je-bezoek/#toegankelijkheid" class="au-c-link" target="_blank">Museum aan de IJzer</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://www.ensorstad.be/nl/toegankelijkheid" class="au-c-link" target="_blank">Het James Ensorhuis</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://www.galloromeinsmuseum.be/nl/praktisch/toegankelijkheid" class="au-c-link" target="_blank">Gallo-Romeins Museum</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
-              <li class="au-o-grid__item">
-                <article class="au-c-card">
-                  <AuToolbar @border="bottom" @size="small">
-                    <AuToolbarGroup>
-                      <AuHeading @level="2" @skin="4">
-                        <a href="https://www.divaantwerp.be/nl/visit/toegankelijkheid" class="au-c-link" target="_blank">DIVA - Museum voor diamant, juwelen en zilver</a>
-                      </AuHeading>
-                    </AuToolbarGroup>
-                  </AuToolbar>
-                </article>
-              </li>
+              {{#each this.model as |building|}}
+                <li class="au-o-grid__item">
+                  <article class="au-c-card">
+                    <AuToolbar @border="bottom" @size="small">
+                      <AuToolbarGroup>
+                        <AuHeading @level="2" @skin="4">
+                          <a href={{building.url}} class="au-c-link" target="_blank">{{building.title}}</a>
+                        </AuHeading>
+                      </AuToolbarGroup>
+                    </AuToolbar>
+                  </article>
+                </li>
+              {{/each}}
             </ul>
             <AuContent id="content" class="au-u-margin-bottom-small au-u-margin-top">
               <p>De URI’s voor de technische integratie zijn beschikbaar op <LinkTo @route="developers.buildings" class="au-c-link" target="_blank">de pagina voor ontwikkelaars</LinkTo>.</p>
