Add disclaimer to Open Source

--- a/app/templates/developers/opensource.hbs
+++ b/app/templates/developers/opensource.hbs
@@ -9,3 +9,6 @@
 </ul>
 
 <p>Indien je verbeteringen wenst uit te voeren kan je een fork maken op GitHub.  De wijzigingen kan je via een Pull Request op GitHub insturen.</p>
+
+<AuHeading @level="3" @skin="3">Vragen of hulp nodig?</AuHeading>
+<p>We streven ernaar om steeds de meest correct info weer te geven. Als je toch een fout zou vinden in de widget kan u deze steeds doorgeven op <a href="mailto:toegankelijk@vlaanderen.be" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
