Change login link page

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -32,7 +32,7 @@
           <div class="au-o-layout au-o-layout--large">
             <AuContent @skin="large" class="au-u-content-center">
               <h2>Nog niet geregistreerd?</h2>
-              <p>Neem contact met ons op op <a href="mailto:toegankelijk@vlaanderen.be?subject=Registratie aanvraag - Toegankelijk Vlaanderen" class="au-c-link">toegankelijk@vlaanderen.be</a><br> om je e-mail adres en organisatie te registeren.</p>
+              <p>Neem contact met ons op via <LinkTo @route="subscribe" class="au-c-link">Inschrijven - Toegankelijk Vlaanderen</LinkTo>.</p>
             </AuContent>
           </div>
         </section>
