Add link for login link support

--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -33,6 +33,8 @@
             <AuContent @skin="large" class="au-u-content-center">
               <h2>Nog niet geregistreerd?</h2>
               <p>Neem contact met ons op via <LinkTo @route="subscribe" class="au-c-link">Inschrijven - Toegankelijk Vlaanderen</LinkTo>.</p>
+              <h2>Wel geregistreed, geen login link?</h2>
+              <p>Neem contact met ons op op <a href="mailto:toegankelijk@vlaanderen.be?subject=Geen login link - Toegankelijk Vlaanderen" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
             </AuContent>
           </div>
         </section>
