--- a/app/templates/login.hbs
+++ b/app/templates/login.hbs
@@ -32,9 +32,15 @@
           <div class="au-o-layout au-o-layout--large">
             <AuContent @skin="large" class="au-u-content-center">
               <h2>Nog niet geregistreerd?</h2>
-              <p>Neem contact met ons op via <LinkTo @route="subscribe" class="au-c-link">Inschrijven - Toegankelijk Vlaanderen</LinkTo>.</p>
-              <h2>Wel geregistreed, geen login link?</h2>
-              <p>Neem contact met ons op op <a href="mailto:toegankelijk@vlaanderen.be?subject=Geen login link - Toegankelijk Vlaanderen" class="au-c-link">toegankelijk@vlaanderen.be</a>.</p>
+
+              <p>
+                Bezorg ons je gegevens via het inschrijfformulier <LinkTo @route="subscribe" class="au-c-link">Inschrijven - Toegankelijk Vlaanderen</LinkTo> zodat we je e-mail adres en organisatie kunnen
+                registreren.
+              </p>
+
+              <p>
+                Bij vragen, neem contact met ons op op <a href="mailto:toegankelijk@vlaanderen.be?subject=Vraag bij inloggen - Toegankelijk Vlaanderen" class="au-c-link">toegankelijk@vlaanderen.be</a>.
+              </p>
             </AuContent>
           </div>
         </section>
