Nicer rendering of building URIs
Something is off in the CSS, it assumed a minimum width for the label to
exist.  Setting that explicitly.

--- a/app/styles/_shame.scss
+++ b/app/styles/_shame.scss
@@ -3,6 +3,9 @@
    Dirty temporary css for demo purposes.
    Some parts will be reused, but most of them will not.
    ========================================================================== */
+.poi-label-for-location-uri {
+  min-width: 5em;
+}
 
 // Toolbar group rows
 .au-c-toolbar__group--row {
