--- a/app/templates/developers/buildings.hbs
+++ b/app/templates/developers/buildings.hbs
@@ -6,7 +6,7 @@
       <article class="au-c-card">
         <AuToolbar @border="bottom" @size="small">
           <AuToolbarGroup>
-            <AuHeading @level="2" @skin="4">
+            <AuHeading @level="2" @skin="4" class="poi-label-for-location-uri">
               {{widget.pointOfInterest.label}}
             </AuHeading>
           </AuToolbarGroup>
